# fedrampgpt-ksi-checker

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Procfile  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: fedramp-ksi-evidence.yml  ksi-evaluate.yml
action/: __init__.py
action/src/: __init__.py  detect.py  evaluate.py  evidence.py  inventory.py  main.py
action/src/ksi/: __init__.py
action/src/ksi/cna/: __init__.py
action/src/ksi/cna/cna01/: __init__.py  evaluator.py  evidence.py
action/src/ksi/cna/shared/: __init__.py  network_inventory.py
app/: __init__.py  artifacts.py  checks.py  config.py  github_auth.py  main.py  webhook.py
shared/: __init__.py  constants.py  constants_cna.py  schemas.py  schemas_network.py
tests/: __init__.py  test_app.py  test_detect.py  test_evidence.py  test_inventory.py
tests/fixtures/cna01-fail/: main.tf
tests/fixtures/cna01-pass/: main.tf
tests/fixtures/error-repo/: main.tf
tests/fixtures/fail-repo/: main.tf
tests/fixtures/pass-repo/: main.tf  variables.tf
